--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@builder.io/react": "^5.0.4",
     "@builder.io/sdk": "^3.0.2",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@react-google-maps/api": "^2.20.3",
+    "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
