--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@builder.io/sdk": "^3.0.2",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-google-maps/api": "^2.20.3",
+    "@types/google.maps": "^3.58.1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "process": "^0.11.10",
